--- a/style.css
+++ b/style.css
@@ -8,6 +8,15 @@ body {
     background-color: #222;
   }
 
+
+  .grid-container{
+    display: flex;
+  }
+
+  .grid-item{
+    flex: 1;
+    /* text-align: center; */
+  }
 .button-icon {
   display: flex;
   justify-content: center;
@@ -23,7 +32,7 @@ body {
 .card {
   width: 90%;
   max-width: 470px;
-  background: linear-gradient(140deg, #00feba, #5b548a);
+  background: linear-gradient(140deg, #21a5dd, #5b548a);
   color: #fff;
   margin: 25px auto 0;
   border-radius: 15px;
@@ -37,7 +46,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 15px;
 }
 
 .search input {
@@ -63,8 +71,11 @@ body {
   cursor: pointer;
 }
 
+
+
 .weather-icon {
   width: 130px;
+  margin-top: 15px;
 }
 
 .weather h2 {
@@ -103,4 +114,19 @@ body {
 
 .humidity-text, .wind-text{
     font-size: 15px;
+}
+
+.error{
+  text-align: left;
+  color:#ef0c0c;
+  font-weight: 500;
+  margin-left: 50px;
+  margin-top: 2px;
+  margin-bottom: 15px;
+  display: none;
+}
+
+.grid-item{
+  display: flex; 
+  justify-self: end;
 }
